--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 <body>
     <h1>What number comes next?</h1>
 
-    <form class="card" id="inputForm">
+    <div class="card" id="inputForm">
         <label for="numbers">Enter numbers separated by space:</label><br>
-        <input type="text" id="numbers" name="numbers"><br>
-        <button type="submit">Predict</button>
-    </form>
+        <input type="text" id="numbersInputTextfield" name="numbers"><br>
+        <button id="submitButton" type="submit">Predict</button>
+    </div>
 
-    <div class="card" id="predictionResult"></div>
+    <div class="card" id="resultContainer"></div>
 
-    <div class="card" id="plot"></div>
+    <div class="card" id="graphContainer"></div>
 
     <script src="script.js"></script>
 </body>
