+ new functions + nesting + errorfixing + number formatting

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <h1>What number comes next?</h1>
 
     <div class="card" id="inputForm">
-        <label for="numbers">Enter numbers separated by space:</label><br>
-        <input type="text" id="numbersInputTextfield" name="numbers"><br>
+        <label for="numbers">Enter numbers separated by space:</label>
+        <input type="text" id="numbersInputTextfield" name="numbers">
         <button id="submitButton" type="submit">Predict</button>
     </div>
 
